Fixed root height and width covers everything

--- a/Snark/src/App.css
+++ b/Snark/src/App.css
@@ -1,8 +1,8 @@
 #root {
-  width: 100%;
+  width: 100vw;
+  height: 100vh;
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
   display: flex;
   flex-direction: column;
