--- a/Snark/src/components/Card/Card.css
+++ b/Snark/src/components/Card/Card.css
@@ -1,13 +1,13 @@
 .card {
   background-color: var(--card-bg);
-  border-radius: 4px;
+  border-radius: 20px;
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1);
   width: 100%;
 }
 
 .card-image {
-  border-top-left-radius: 4px;
-  border-top-right-radius: 4px;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
   object-fit: fill;
   width: 100%;
 }
